--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
-numpy==1.20.1
+numpy
 pip==21.0.1
 setuptools==49.2.1
 Werkzeug==1.0.1
